--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,8 @@ body{
     text-decoration: none;
     color: var(--cor-secundaria);
     font-family: var(--fonte-secundaria);
+    align-content: center;
+    display: block;
 }
 .apresentacao__links__navegacao:hover{
     background-color: var(--cor-hover);
